--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,8 @@
   ],
   "dependencies": {
     "purescript-console": "^2.0.0",
-    "purescript-jquery": "^3.0.0"
+    "purescript-jquery": "^3.0.0",
+    "purescript-dom": "^3.3.1"
   },
   "devDependencies": {
     "purescript-psci-support": "^2.0.0"
