--- a/bower.json
+++ b/bower.json
@@ -8,8 +8,12 @@
   ],
   "dependencies": {
     "purescript-console": "^2.0.0",
-    "purescript-jquery": "^3.0.0",
-    "purescript-dom": "^3.3.1"
+    "purescript-jquery": "git@github.com:dboris/purescript-jquery.git#c3ba507a1eb92f7995cfcb52ea35d93dde2df9f9",
+    "purescript-dom": "^3.3.1",
+    "purescript-datetime": "^2.0.0",
+    "purescript-js-date": "^3.0.0",
+    "purescript-maps": "^2.0.2",
+    "purescript-refs": "^2.0.0"
   },
   "devDependencies": {
     "purescript-psci-support": "^2.0.0"
