--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,7 @@
   ],
   "dependencies": {
     "purescript-console": "^2.0.0",
-    "purescript-jquery": "git@github.com:dboris/purescript-jquery.git#c3ba507a1eb92f7995cfcb52ea35d93dde2df9f9",
+    "purescript-jquery": "^3.1.0",
     "purescript-dom": "^3.3.1",
     "purescript-datetime": "^2.0.0",
     "purescript-js-date": "^3.0.0",
