Differentiating the first run.

--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "purescript-maps": "^2.0.2",
     "purescript-refs": "^2.0.0",
     "purescript-now": "^2.0.0",
-    "purescript-zippable": "^0.1.0"
+    "purescript-zippable": "^0.1.0",
+    "purescript-localstorage": "^3.0.1"
   },
   "devDependencies": {
     "purescript-psci-support": "^2.0.0"
