--- a/bower.json
+++ b/bower.json
@@ -7,16 +7,18 @@
     "output"
   ],
   "dependencies": {
+    "purescript-affjax": "^3.0.2",
+    "purescript-argonaut": "^2.0.0",
     "purescript-console": "^2.0.0",
-    "purescript-jquery": "^3.1.0",
-    "purescript-dom": "^3.3.1",
     "purescript-datetime": "^2.0.0",
+    "purescript-dom": "^3.3.1",
+    "purescript-jquery": "^3.1.0",
     "purescript-js-date": "^3.0.0",
+    "purescript-localstorage": "^3.0.1",
     "purescript-maps": "^2.0.2",
-    "purescript-refs": "^2.0.0",
     "purescript-now": "^2.0.0",
-    "purescript-zippable": "^0.1.0",
-    "purescript-localstorage": "^3.0.1"
+    "purescript-refs": "^2.0.0",
+    "purescript-zippable": "^0.1.0"
   },
   "devDependencies": {
     "purescript-psci-support": "^2.0.0"
