--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
     "purescript-console": "^2.0.0",
     "purescript-datetime": "^2.0.0",
     "purescript-dom": "^3.3.1",
+    "purescript-foreign": "^3.0.1",
     "purescript-foreign-generic": "^3.0.0",
     "purescript-jquery": "^3.1.0",
     "purescript-js-date": "^3.0.0",
@@ -18,10 +19,12 @@
     "purescript-maps": "^2.0.2",
     "purescript-now": "^2.0.0",
     "purescript-refs": "^2.0.0",
-    "purescript-webworkers": "^0.1.2",
     "purescript-zippable": "^0.1.0"
   },
   "devDependencies": {
     "purescript-psci-support": "^2.0.0"
+  },
+  "resolutions": {
+    "purescript-foreign": "^3.0.1"
   }
 }
